# telegram-bot-news-ai-chat

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/config/: container.py  env.py  router.py
app/handlers/: admin_handler.py  chat_handler.py  env.py  fallback_handler.py  settings_handler.py  start_handler.py  status_handler.py
app/middlewares/: auth_middleware.py  error_middleware.py  rate_limit_middleware.py
app/services/: admin_service.py  ai_service.py  analytics_service.py  auth_service.py  chat_service.py  cleanup_service.py  log_service.py  settings_service.py  template_service.py
app/storage/: analytics_storage.py  chat_storage.py  settings_storage.py
app/templates/admin/: admin_added.txt  admin_data.txt  admin_tokens.txt  error_file_empty.txt  global_settings.txt  global_settings_updated.txt  user_added.txt
app/templates/error/: access_denied.txt  admin_only.txt  empty_message.txt  empty_prompt.txt  internal_error.txt  invalid_setting_value.txt  invalid_user_id.txt  rate_limit.txt
app/templates/user/: new_chat_success.txt  reset_success.txt  settings.txt  settings_updated.txt  status.txt
app/utils/: file_manager.py  scheduler.py
docs/: commands.md
tests/unit/services/: test_analytics_service.py  test_auth_service.py  test_chat_service.py  test_cleanup_service.py  test_settings_service.py  test_template_service.py
tests/unit/storage/: test_settings_storage.py
tests/unit/utils/: test_file_manager.py
