[project]
name = "chatgpt-telegram-news-bot"
version = "0.1.0"
description = "Telegram bot for writing news with personal prompts and admin tools"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]