[project]
name = "chatgpt-telegram-news-bot"
version = "0.1.0"
description = "Telegram bot for writing news with personal prompts and admin tools"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.0.0",
    "python-dotenv>=1.0.0",
    "apscheduler>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"